header section div add

--- a/daily-diary/index.html
+++ b/daily-diary/index.html
@@ -8,6 +8,26 @@
     <title>Daily Diary</title>
 </head>
 <body>
+    <header class="header">
+    <div class="header-inner">
+         <div class="logo">
+
+
+         </div>
+
+         <div class="menu">
+            
+
+         </div>
+
+         <div class="user">
+            
+
+         </div>
+
+    </div>
+
+    </header>
     <div class="container"> <!--전체 꽉찬 틀-->
         <div class="wrapper"><!--일기장 - 일기 바깥틀-->
 
