--- a/daily-diary/index.html
+++ b/daily-diary/index.html
@@ -25,7 +25,7 @@
                         <a href="#none">오늘의 일기</a>
                     </li>
                     <li>
-                        <a href="#none">내일의 일기</a>
+                        <a href="#none">내일의 일기1</a>
                     </li>
 
                 </ul>
@@ -47,8 +47,8 @@
 
                 <h1 class="wrapper__head__title">My Diary</h1>
                 <p class="wrapper__head__subtitle">
-                My Diary 입니다!<br>
-            색과 사이즈로 커스텀 해봐요<br>
+                 My Diary 입니다!<br>
+                 색과 사이즈로 커스텀 해봐요<br>
                 <span id="point">Have a Good Day.</span>
                 </p>
 
