--- a/daily-diary/index.html
+++ b/daily-diary/index.html
@@ -25,7 +25,7 @@
                         <a href="#none">오늘의 일기</a>
                     </li>
                     <li>
-                        <a href="#none">내일의 일기1</a>
+                        <a href="#none">내일의 일기</a>
                     </li>
 
                 </ul>
